[tool.poetry]
name = "stringql"
version = "1.0.0"
description = "Library to performs SQL string parameterisation and execution."
authors = ["Gabriele Simeone <gabriele.simeone@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/johnfraney/flake8-markdown"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.8.6"
"testing.postgresql " = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
